--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,11 @@ jobs:
       - name: Upload astra-child theme
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.FTP_HOST_FOR_TESTING014 }}
-          username: ${{ secrets.FTP_USERNAME_FOR_TESTING014 }}
-          password: ${{ secrets.FTP_PW_FOR_TESTING014 }}
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          port: ${{ secrets.FTP_PORT_FOR_TESTING014 }}
+          port: ${{ secrets.FTP_PORT }}
           local-dir: ./wp-content/themes/astra-child/
           server-dir: public_html/wp-content/themes/
           exclude: |
@@ -71,11 +71,11 @@ jobs:
       - name: Upload selected PHP files to includes
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.FTP_HOST_FOR_TESTING014 }}
-          username: ${{ secrets.FTP_USERNAME_FOR_TESTING014 }}
-          password: ${{ secrets.FTP_PW_FOR_TESTING014 }}
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          port: ${{ secrets.FTP_PORT_FOR_TESTING014 }}
+          port: ${{ secrets.FTP_PORT }}
           local-dir: ./includes-bundle/
           server-dir: public_html/includes/
           exclude: |
