--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
           port: ${{ secrets.FTP_PORT }}
-          local-dir: ./wp-content/themes/astra-child/
+          local-dir: ./wp-content/themes/
           server-dir: wp-content/themes/
           exclude: |
             **/.git*
